# autoDialer

./: .env.example  .gitignore  Makefile  manage.py  pyproject.toml
accounts/: serializer.py  urls.py  utils.py  views.py
api/: models.py  serializers.py  tasks.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_callrecord_created_at.py  0003_callrecord_api_callrec_sid_d40708_idx_and_more.py  0004_alter_callrecord_sid.py  0005_alter_contact_unique_together.py
api/services/: dialer.py
autoDialer/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: test_models.py  test_serializers.py  test_views.py
